prepare for release

--- a/vignettes/fork-and-merge.Rmd
+++ b/vignettes/fork-and-merge.Rmd
@@ -18,6 +18,7 @@ login()
 ```
 ```{r, results='hide', echo=FALSE, message=FALSE}
 library(crunch)
+set_crunch_opts("crunch.api" = "https://app.crunch.io/api/")
 library(httptest)
 start_vignette("fork-and-merge")
 login()
