--- a/vignettes/subtotals.Rmd
+++ b/vignettes/subtotals.Rmd
@@ -15,6 +15,7 @@ library(crunch)
 
 [Previous: exporting data](export.html)
 ```{r, results='hide', include = FALSE}
+set_crunch_opts("crunch.api" = "https://app.crunch.io/api/")
 options(width=120)
 library(httptest)
 if (!dir.exists("subtotals")) {
