--- a/vignettes/crunch.Rmd
+++ b/vignettes/crunch.Rmd
@@ -15,9 +15,9 @@ library(crunch)
 ```
 
 ```{r, results='hide', include = FALSE}
+set_crunch_opts("crunch.api" = "https://app.crunch.io/api/")
 library(httptest)
 start_vignette("crunch")
-login()
 ```
 
 Both **crunch** and the Crunch web application communicate with the same application programming interface (API), served over secure HTTP. Within an R script or interactive session, the **crunch** package allows you to interact with your data in Crunch with expressive, idiomatic R. Functions in crunch handle the translation between R objects and API requests and responses, so you can typically interact with your datasets as if they were local `data.frames` (with some additional metadata), not data on a remote server.
